--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -10,6 +10,7 @@
 @import '../../components/ratebtn/ratebtn.scss';
 @import '../../components/range-slider/range-slider.scss';
 @import '../../components/button/button.scss';
+@import '../../components/pagination/pagination.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
