--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -1,26 +1,183 @@
+.drop-down {
+  position: absolute;
+  z-index: 100;
+  top: -3px;
+  left: 0;
+  visibility: hidden;
+  box-sizing: border-box;
+  width: 100%;
+  opacity: 0;
+  background: $mainColor;
+  border: 1px solid rgba(31, 32, 65, .5);
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, .05);
+  transition: all .2s ease-in;
+  transform: translateY(-10px);
+
+  &_opened {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .drop-down__wrap {
+  padding-top: 7px;
+  padding-right: 7px;
+  padding-left: 14px;
+  padding-bottom: 8px;
+}
+
+.drop-down__count-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.drop-down__count-item {
+  margin-bottom: 7px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.drop-down__counter-menu {
+  display: flex;
+  width: 92px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.drop-down__count-item-name {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.drop-down__select-view {
+  margin: 0;
+  width: 20px;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.drop-down__counter-btn {
+  position: relative;
+  padding: 0;
+  box-sizing: border-box;
+  width: 30px;
+  height: 30px;
+  font-size: 18px;
+  text-align: center;
+  vertical-align: middle;
+  color: transparentize($contentColor, .5);
+  background: $mainColor;
+  border: 1px solid transparentize($contentColor, .5);
+  border-radius: 50%;
+  cursor: pointer;
+
+  &_plus::after {
+    position: absolute;
+    top: 2px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: '+';
+  }
+
+  &_minus::after {
+    position: absolute;
+    top: 2px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: '-';
+  }
+
+  &_disabled {
+    color: transparentize($contentColor, .75);
+    border: 1px solid transparentize($contentColor, .75);
+    cursor: default;
+  }
+}
+
+.drop-down__control {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.drop-down__button {
+  padding: 0;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: transparentize($contentColor, .5);
+  background: transparent;
+  border: none;
+  transition: color .2s ease-in-out, transform .1s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    color: $accentColor;
+  }
+
+  &:active {
+    transform: translateY(3px);
+  }
+
+  &_accentuating {
+    color: $accentColor;
+
+    &:hover {
+      color: transparentize($contentColor, .5);
+    }
+  }
+
+  &_hiden {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.drop-down-container {
+  position: relative;
+}
+
+.drop-down-input__wrap {
   display: flex;
   width: 100%;
 
   &:hover {
-    .drop-down__body {
+    .drop-down-input__body {
       color: transparentize($contentColor, .25);
       border-color: transparentize($contentColor, .25);
     }
 
-    .drop-down__button {
+    .drop-down-input__button {
       border-color: transparentize($contentColor, .25);
     }
   }
 
   &:active {
-    .drop-down__button {
+    .drop-down-input__button {
       background-position: center 68%;
     }
   }
 }
 
-.drop-down__body {
+.drop-down-input__body {
   padding: 9px 14px;
   padding-right: 0;
   box-sizing: border-box;
@@ -45,7 +202,7 @@
   }
 }
 
-.drop-down__button {
+.drop-down-input__button {
   padding: 0;
   box-sizing: border-box;
   width: 44px;
