--- a/src/components/typography/typography.scss
+++ b/src/components/typography/typography.scss
@@ -22,6 +22,7 @@
       font-family: Montserrat, Quicksand, Arial, sans-serif;
       font-size: 12px;
       line-height: 15px;
+      font-weight: bold;
     }
 
     &_body {
