--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -11,12 +11,14 @@
 @import '../../components/range-slider/range-slider.scss';
 @import '../../components/button/button.scss';
 @import '../../components/pagination/pagination.scss';
+@import '../../components/expandable-checkbox/expandable-checkbox.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
 }
 
 .form-elements__row {
+  margin-bottom: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -49,8 +51,16 @@
 .form-elements__input {
   margin-bottom: 20px;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   &_size_medium {
     width: 83%;
+  }
+
+  &_bottom-gap {
+    margin-bottom: 174px;
   }
 }
 
@@ -126,4 +136,12 @@
 
 .form-elements__submit-btn {
   margin-bottom: 41px;
+}
+
+.form-elements__row-wrap {
+  width: 23%;
+}
+
+.form-elements__checkbox-list {
+  margin-bottom: 32px;
 }
