--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -4,6 +4,20 @@
   list-style: none;
 }
 
+.checkbox__label {
+  cursor: pointer;
+}
+
+.checkbox__title {
+  margin: 0;
+  padding-left: 30px;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: bold;
+  color: transparentize($contentColor, .25);
+}
+
 .checkbox__item {
   margin: 0;
   margin-bottom: 12px;
@@ -25,7 +39,6 @@
   line-height: 18px;
   font-weight: normal;
   color: transparentize($contentColor, .55);
-  cursor: pointer;
 
   &::before {
     position: absolute;
@@ -55,6 +68,16 @@
     border-bottom: 2px solid $accentColor;
     transition: opacity .3s ease 0s, visibility .3s ease 0s;
     transform: rotate(45deg);
+  }
+
+  &_with-title {
+    &::before {
+      top: -21px;
+    }
+
+    &::after {
+      top: -16px;
+    }
   }
 }
 
