--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -13,6 +13,7 @@
 @import '../../components/pagination/pagination.scss';
 @import '../../components/expandable-checkbox/expandable-checkbox.scss';
 @import '../../components/bullet-list/bullet-list.scss';
+@import '../../components/features/features.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
