--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -13,6 +13,7 @@ include ../../components/pagination/pagination
 include ../../components/expandable-checkbox/expandable-checkbox
 include ../../components/bullet-list/bullet-list
 include ../../components/features/features
+include ../../components/comment/comment
 
 block variables
   -
@@ -220,8 +221,17 @@ block content
                 }
               ]
             })
-        .form-elements__row-wrap
+        div(class="form-elements__row-wrap form-elements__row-wrap_size_large")
           .form-elements__comment
+            +comment({
+              authorName: "Мурад Сарафанов",
+              datePost: "5 дней назад",
+              likeCount: 12,
+              likeIsActived: true,
+              avatarSrc: "img/murad.jpg",
+              text:
+                "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
+            })
 
 
         
