--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -14,6 +14,7 @@
 @import '../../components/expandable-checkbox/expandable-checkbox.scss';
 @import '../../components/bullet-list/bullet-list.scss';
 @import '../../components/features/features.scss';
+@import '../../components/comment/comment.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
@@ -146,6 +147,10 @@
 
 .form-elements__row-wrap {
   width: 23%;
+
+  &_size_large {
+    width: 61.3%;
+  }
 }
 
 .form-elements__checkbox-list {
