добавил date-wishes

--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,2 +1,6 @@
 @import '../../style/utils/variables.scss';
 @import '../../components/ui-kit-logo/ui-kit-logo.scss';
+@import '../../components/typography/typography.scss';
+@import '../../components/button/button.scss';
+@import '../../components/drop-down/drop-down.scss';
+@import '../../components/date-wishes/date-wishes.scss';
