--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -17,7 +17,7 @@ mixin dateWishes()
               .date-wishes__title-wrap
                 +typography({ text: "Выезд", variant: "h3", hasUpper: true })
               +dropDown({ text: "ДД.ММ.ГГГГ", classForJs: "js-departure-input" })
-            div(id="date-picker-container" class="date-picker-container  date-wishes__date-picker-container")
+            div(class="date-picker-container js-date-picker-container  date-wishes__date-picker-container")
           .date-wishes__title-wrap
             +typography({ text: "Гости", variant: "h3", hasUpper: true })  
           +dropDown({ text: "Сколько гостей", classForJs: "js-input-drop-down" })
