вынес изображения для pug в Img

--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -228,7 +228,7 @@ block content
               datePost: "5 дней назад",
               likeCount: 12,
               likeIsActived: true,
-              avatarSrc: "img/murad.jpg",
+              avatarSrc: "img/avatars/murad.jpg",
               text:
                 "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
             })
