--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -25,6 +25,6 @@ block content
         burgerBtnClass: "js-second-main-menu-burger-btn",
       })
     .headers-and-footers__item
-      +footer({ isTightBottom: true })
+      +footer()
     div(class="headers-and-footers__item  headers-and-footers__item_short")
       +footer({ isShort: true })
