--- a/src/pages/headers-and-footers/headers-and-footers.scss
+++ b/src/pages/headers-and-footers/headers-and-footers.scss
@@ -3,6 +3,12 @@
 @import '../../components/header/header.scss';
 @import '../../components/main-menu/main-menu.scss';
 @import '../../components/button/button.scss';
+@import '../../components/footer/footer.scss';
+@import '../../components/typography/typography.scss';
+@import '../../components/input/input.scss';
+@import '../../components/nav-menu/nav-menu.scss';
+@import '../../components/social-buttons/social-buttons.scss';
+@import '../../components/copyright/copyright.scss';
 
 .headers-and-footers {
   background: #f4f4f6;
