fix media query

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -163,7 +163,7 @@
     cursor: pointer;
   }
 
-  @media (max-width: 425px) {
+  @media (min-width: 320px) and (max-width: 425px) {
     right: 60px;
   }
 
