--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    meta(name="description", content=description)
-    meta(name="keywords" content=keywords)
-    meta(name="msapplication-TileColor" content="#da532c")
-    meta(name="theme-color" content="#ffffff")
-    link(rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png")
-    link(rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png")
-    link(rel="manifest" href="favicons/site.webmanifest")
-    link(rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5")
-  body
-    h1 Hello World!
+extends ../../layout/main.pug
+include ../../components/date-wishes/date-wishes
+
+block variables
+  -
+    const title = "Toxin - главная!";
+    const description = "Toxin description";
+    const keywords = "Toxin keywords"
+    const pageClass = "index-page";
+  
+block content
+  .index-block
+    .container
+      .index-block__wrap
+        +dateWishes()
+      .index-block__slogan
+        p Лучшие номера для вашей работы, отдыха и просто вдохновения
