--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,4 +1,4 @@
 mixin logo()
   .logo
-    a(class="logo__link" href="index")
+    a(class="logo__link" href="index.html")
       img(class="logo__img" src="img/logo.svg" alt="Логотип Токсин")
