--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -150,27 +150,27 @@ block content
             div(class="drop-down-container  js-drop-down-container")
           .form-elements__checkbox-list
             +expandableCheckbox({
-              summary: 'Expandable checkbox list',
+              summary: "Expandable checkbox list",
               items: [
-                { label: 'Завтрак' },
-                { label: 'Письменный стол', isChecked: true },
-                { label: 'Стул для кормления', isChecked: true },
-                { label: 'Кроватка', isChecked: true },
-                { label: 'Телевизор' },
-                { label: 'Шампунь' },
+                { label: "Завтрак" },
+                { label: "Письменный стол", isChecked: true },
+                { label: "Стул для кормления", isChecked: true },
+                { label: "Кроватка", isChecked: true },
+                { label: "Телевизор" },
+                { label: "Шампунь" },
               ],
             })
           .form-elements__checkbox-list
             +expandableCheckbox({
-              summary: 'Expandable checkbox list',
+              summary: "Expandable checkbox list",
               isOpened: true,
               items: [
-                { label: 'Завтрак' },
-                { label: 'Письменный стол', isChecked: true },
-                { label: 'Стул для кормления', isChecked: true },
-                { label: 'Кроватка', isChecked: true },
-                { label: 'Телевизор' },
-                { label: 'Шампунь' },
+                { label: "Завтрак" },
+                { label: "Письменный стол", isChecked: true },
+                { label: "Стул для кормления", isChecked: true },
+                { label: "Кроватка", isChecked: true },
+                { label: "Телевизор" },
+                { label: "Шампунь" },
               ],
             })
         .form-elements__row-wrap
