--- a/src/components/total-card/total-card.scss
+++ b/src/components/total-card/total-card.scss
@@ -170,6 +170,7 @@
   text-align: right;
 }
 
-.total-card__date-picker-container {
+.total-card__date-inputs .total-card__date-picker-container {
   position: absolute;
+  top: 269px;
 }
