заменил ' на " в checkbox.pug

--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -6,8 +6,8 @@ mixin checkbox({ items })
           -
             const { label, title, isChecked } = item;
             const labelSpanClass = title
-              ? 'checkbox__label-span checkbox__label-span_with-title'
-              : 'checkbox__label-span';
+              ? "checkbox__label-span checkbox__label-span_with-title"
+              : "checkbox__label-span";
 
           li.checkbox__item
             label(class="checkbox__label")
