--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -15,7 +15,7 @@ mixin button(options)
       buttonClass += ` button_size_${size}`;
     }
 
-    const { isDisabled, withIcon, buttonType, title, path } = options;
+    const { isDisabled, withIcon, buttonType = "button", title, path } = options;
 
     if (isDisabled) {
        buttonClass += " button_disabled";
@@ -25,9 +25,7 @@ mixin button(options)
       buttonClass += " button_with-icon";
     }
 
-    const typeButton = buttonType ? buttonType : "button";
-
   if path
     a(class=buttonClass href=path)= title
   else
-    button(class=buttonClass type=typeButton disabled=isDisabled)= title
+    button(class=buttonClass type=buttonType disabled=isDisabled)= title
